fix: align user name

--- a/src/app/shocklogic/shocklogic.component.scss
+++ b/src/app/shocklogic/shocklogic.component.scss
@@ -31,3 +31,7 @@
 .fs-inherit{
     font-size: inherit;
 }
+
+.v-middle{
+    vertical-align: middle;
+}
